# honulabs

./: README.md  pyproject.toml
cli/: __main__.py  api_client.py  auth_client.py  cmd.py  schema.py  settings.py
cli/utils/: business_operations.py  handle_business_generation.py  handle_idea_generation.py  job_manager.py  mcp_setup.py  pick_business.py  prompts.py  token.py
cli/utils/templates/: success_page.html
